--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ h2 {
 
   @media screen and (min-width: 40rem) {
     main {
-        width: clamp(40rem, 64rem, 90rem);
+        width: clamp(40rem, 80%, 90rem);
         display: grid;
         grid-template-columns: 1fr minmax(12.5rem, 31.25rem) 1fr;
         grid-template-areas: 
